Support dd and fastboot flashing
Add fastboot device discovery and flashing support alongside the existing dd writer, with CLI and GUI target selection switching based on the selected image strategy.

Assisted-by: codex:gpt-5.5